--- a/Event_1.html
+++ b/Event_1.html
@@ -6,20 +6,20 @@
 	<title>EVENT</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-[#020202]">
       <!---Header--->
     <header class="text-gray-400 bg-gray-900 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-      <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span>
+     <a href="landing.html"> <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span></a>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a href="#" class="mr-5 hover:text-white">Buy/Rent</a>
-      <a href="#" class="mr-5 hover:text-white">Reading Zone</a>
-      <a href="#" class="mr-5 hover:text-white">Library near me</a>
-      <a href="#" class="mr-5 hover:text-white">My Space</a>
+      <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
+      <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
+      <a href="library.html" class="mr-5 hover:text-white">Library near me</a>
+      <a href="myspace.html" class="mr-5 hover:text-white">My Space</a>
     </nav>
   </div>
 </header>
@@ -48,7 +48,7 @@
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap w-full mb-20">
       <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white"><span class="text-[#f97316]">"LIT-FESTS"</span> IN <span class="text-green-500">YOUR CITY...</span></h1>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white"><span class="text-red-500">"LIT-FESTS"</span> IN <span >YOUR CITY...</span></h1>
         <div class="h-1 w-20 bg-indigo-500 rounded"></div>
       </div>
       <p class="lg:w-1/2 w-full leading-relaxed text-gray-400 text-opacity-90"> Litfest - A literary festival, also known as a book festival or writers' festival, is a regular gathering of writers and readers, typically on an annual basis in a particular city.</p>
@@ -92,13 +92,13 @@
     <!--/event page-->
     <!--event page 02-->
      <section class="text-gray-400 body-font bg-[#020202]">
-  <div class="container px-5 py-24 mx-auto">
+  <div class="container px-5 py-18 mx-auto">
     <div class="flex flex-wrap w-full mb-20">
       <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white"><span class="text-[#f97316]">"BOOK-FAIRS"</span> IN <span class="text-green-500">YOUR CITY...</span></h1>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white"><span class="text-green-500">"BOOK-FAIRS"</span> IN <span >YOUR CITY...</span></h1>
         <div class="h-1 w-20 bg-indigo-500 rounded"></div>
       </div>
-      <p class="lg:w-1/2 w-full leading-relaxed text-gray-400 text-opacity-90">Bookfair -a display or exhibit of books typically by a group of publishers or bookdealers for promoting sales and stimulating interest. : a fair or bazaar at which books are sold or auctioned to raise money for some worthy cause.</p>
+      <p class="lg:w-1/2 w-full leading-relaxed text-gray-400 text-opacity-90">Bookfair : a display or exhibit of books typically by a group of publishers or bookdealers for promoting sales and stimulating interest. : a fair or bazaar at which books are sold or auctioned to raise money for some worthy cause.</p>
     </div>
     <div class="flex flex-wrap -m-4">
       <div class="xl:w-1/4 md:w-1/2 p-4">
@@ -136,6 +136,9 @@
     </div>
   </div>
 </section>
+<br>
+<br>
+<br>
     <!--/event page 02-->
 
     <!--footer-->
