--- a/landing.html
+++ b/landing.html
@@ -7,9 +7,9 @@
     <title>Landing Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.auth0.com/js/lock/11.32/lock.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles.css">
 </head>
-<body>
+<body class="bg-[#020202]">
 
     <!---Header--->
     <header class="text-gray-400 bg-gray-900 body-font">
@@ -20,10 +20,11 @@
       <span class="ml-3 text-xl">Hello World!</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a class="mr-5 hover:text-white">Buy/Rent</a>
-      <a class="mr-5 hover:text-white">Reading Zone</a>
-      <a class="mr-5 hover:text-white">Events</a>
-      <a class="mr-5 hover:text-white">Library Near Me</a>
+      <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
+      <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
+      <a href="Event_1.html" class="mr-5 hover:text-white">Events</a>
+      <a href="library.html" class="mr-5 hover:text-white">Library Near Me</a>
+      <a href="myspace.html" class="mr-5 hover:text-white">My Space</a>
     </nav>
     <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Profile</svg>
     </button>
@@ -39,14 +40,14 @@
       <!--Content Starts from Here!-->
 
       <section class=" bg-none body-font">
-        <div class="container mx-auto flex px-5 py-18 items-center justify-center flex-col">
+        <div class="container mx-auto flex px-5 py-20 items-center justify-center flex-col">
           <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10  object-cover object-center rounded " alt="hero" src="Assets/landing.png">
           <div class="text-center lg:w-2/3 w-full">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">About Us!</h1>
             <p class="leading-relaxed mb-8 text-white">tumptown DIY, kale chips beard jianbing tousled. Chambray dreamcatcher trust fund, kitsch vice godard disrupt ramps hexagon mustache umami snackwave tilde chillwave ugh. Pour-over meditation PBR&amp;B pickled ennui celiac mlkshk freegan photo booth af fingerstache pitchfork.</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="01-login/index.html">Sign In</button>
-              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Sign Up</button>
+              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="loginandremform.html">Sign In</button></a>
+              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"><a href="loginandremform.html">Sign Up</button></a>
             </div>
           </div>
         </div>
