--- a/reading_zone.html
+++ b/reading_zone.html
@@ -17,13 +17,13 @@
       <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-        <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span>
+      <a href="landing.html">  <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span></a>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a href="#" class="mr-5 hover:text-white">Buy/Rent</a>
-        <a href="#" class="mr-5 hover:text-white">Reading Zone</a>
-        <a href="#" class="mr-5 hover:text-white">Library near me</a>
-        <a href="#" class="mr-5 hover:text-white">My Space</a>
+        <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
+        <a href="Event_1.html" class="mr-5 hover:text-white">Events</a>
+        <a href="library.html" class="mr-5 hover:text-white">Library near me</a>
+        <a href="myspace.html" class="mr-5 hover:text-white">My Space</a>
       </nav>
     </div>
   </header>
