--- a/buy_rent_in1.html
+++ b/buy_rent_in1.html
@@ -16,10 +16,10 @@
       <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a href="#" class="mr-5 hover:text-white">Reading Zone</a>
-      <a href="#" class="mr-5 hover:text-white">Events</a>
-      <a href="#" class="mr-5 hover:text-white">Library near me</a>
-      <a href="#" class="mr-5 hover:text-white">My Space</a>
+      <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
+      <a href="Event_1.html" class="mr-5 hover:text-white">Events</a>
+      <a href="library.html" class="mr-5 hover:text-white">Library near me</a>
+      <a href="myspace.html" class="mr-5 hover:text-white">My Space</a>
     </nav>
   </div>
 </header>
@@ -61,7 +61,7 @@
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
-          <a href="#"><h2 class="text-white title-font text-lg font-medium">Cengage Physics (JEE ADV)</h2></a>
+          <a href="buy_rent_in2.html"><h2 class="text-white title-font text-lg font-medium">Cengage Physics (JEE ADV)</h2></a>
           <p class="mt-1">₹850</p>
         </div>
       </div>
