--- a/buy_rent_in2.html
+++ b/buy_rent_in2.html
@@ -16,10 +16,10 @@
       <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a href="#" class="mr-5 hover:text-white">Reading Zone</a>
-      <a href="#" class="mr-5 hover:text-white">Events</a>
-      <a href="#" class="mr-5 hover:text-white">Library near me</a>
-      <a href="#" class="mr-5 hover:text-white">My Space</a>
+      <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
+      <a href="Event_1.html" class="mr-5 hover:text-white">Events</a>
+      <a href="library.html" class="mr-5 hover:text-white">Library near me</a>
+      <a href="myspace.html" class="mr-5 hover:text-white">My Space</a>
     </nav>
   </div>
 </header>
