--- a/Event_1.html
+++ b/Event_1.html
@@ -13,7 +13,7 @@
     <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-     <a href="landing.html"> <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span></a>
+     <a href="landing.html"> <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
@@ -56,15 +56,15 @@
     <div class="flex flex-wrap -m-4">
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/720x400" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/LitFest.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
-          <h2 class="text-lg text-white font-medium title-font mb-4">India Today Group - "Lit-Fest"</h2>
+          <a href="EventDetails.html"><h2 class="text-lg text-white font-medium title-font mb-4">India Today Group - "Lit-Fest"</h2></a>
           <p class="leading-relaxed text-base">Date - 31/03/2023 <br> Venue - Grass-Memorial , Raipur</p>
         </div>
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/721x401" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/LitFest.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
           <h2 class="text-lg text-white font-medium title-font mb-4">HITVADA - "Lit-Fest"</h2>
           <p class="leading-relaxed text-base">Chief Guest - Chetan Bhagat <br> Date - 7/04/2023 <br> Venue - GEC Raipur</p>
@@ -72,7 +72,7 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/722x402" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/LitFest.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
           <h2 class="text-lg text-white font-medium title-font mb-4">AVINYA - NIT RAIPUR's Lit-Fest </h2>
           <p class="leading-relaxed text-base"> Date - 01/04/2023 <br> Venue - NIT Raipur Ground</p>
@@ -80,7 +80,7 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/LitFest.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
           <h2 class="text-lg text-white font-medium title-font mb-4">IIT BHILAI - Lit-Fest</h2>
           <p class="leading-relaxed text-base"><br>Date - 5/04/2023 <br> Venue - GEC_IIT campus , Raipur</p>
@@ -103,7 +103,7 @@
     <div class="flex flex-wrap -m-4">
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/720x400" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/BookFair.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
           <h2 class="text-lg text-white font-medium title-font mb-4">CG GOVT - Book-Fair</h2>
           <p class="leading-relaxed text-base"><br>Date - 5/04/2023 <br> Venue - BTI Ground , Raipur</p>
@@ -111,7 +111,7 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/721x401" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/BookFair.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
           <h2 class="text-lg text-white font-medium title-font mb-4">Gitanjali Press - Book-Fair</h2>
           <p class="leading-relaxed text-base"><br>Date - 5/04/2023 <br> Venue - Gandhi maidan , Raipur</p>
@@ -119,7 +119,7 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/722x402" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/BookFair.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
           <h2 class="text-lg text-white font-medium title-font mb-4">BOOK-FIESTA</h2>
           <p class="leading-relaxed text-base"><br>Date - 5/04/2023 <br> Venue - Pragati maidan , Raipur</p>
@@ -127,10 +127,10 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="Assets/BookFair.png" alt="content">
           <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Event</h3>
-          <h2 class="text-lg text-white font-medium title-font mb-4">San Francisco</h2>
-          <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+          <h2 class="text-lg text-white font-medium title-font mb-4">Book Fair</h2>
+          <p class="leading-relaxed text-base"><br>Date - 3/06/2023 <br> Venue - TBD , Raipur</p>
         </div>
       </div>
     </div>
@@ -146,7 +146,7 @@
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
       <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
-      <span class="ml-3 font-bold text-white text-xl">BRO-CODES</span>
+      <span class="ml-3 font-bold text-white text-xl">Read'O Verse!</span>
     </a>
     <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 BROCODES —
       <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@ANSH & @MAHARSHI</a>
