--- a/buy_rent_in2.html
+++ b/buy_rent_in2.html
@@ -13,8 +13,8 @@
     <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-      <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span>
-    </a>
+      <a href="landing.html"><span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
+        </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
       <a href="Event_1.html" class="mr-5 hover:text-white">Events</a>
@@ -29,7 +29,7 @@
          <section class="text-gray-400 bg-gray-900 body-font overflow-hidden">
   <div class="my-24 mx-6 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
+      <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="Assets/CengageBuy.png">
       <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
         <h2 class="text-sm title-font text-gray-500 tracking-widest">JEE MAINS / JEE ADV BOOKS</h2>
         <h1 class="text-white text-3xl title-font font-medium mb-1">Cengage Physics (JEE ADV)</h1>
@@ -83,7 +83,7 @@
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
       <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
-      <span class="ml-3 font-bold text-white text-xl">BRO-CODES</span>
+      <span class="ml-3 font-bold text-white text-xl">Read'O Verse!</span>
     </a>
     <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 BROCODES —
       <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@ANSH & @MAHARSHI</a>
