--- a/landing.html
+++ b/landing.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.auth0.com/js/lock/11.32/lock.min.js"></script>
     <link rel="stylesheet" href="Styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body class="bg-[#020202]">
 
@@ -17,7 +19,7 @@
     <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <img src="Assets/header.gif" alt="logo" class="w-9 h-9 ">
 
-      <span class="ml-3 text-xl">Hello World!</span>
+      <span class="ml-3 text-xl">Read'O Verse!</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
@@ -55,10 +57,6 @@
 
       
 
-
-
-
-
     <!--Content Ends from Here!-->  
     <!--Background Ends here-->
 </div>
@@ -68,7 +66,7 @@
             <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
                 <img src="Assets/header.gif" alt="logo" class="w-9 h-9 ">
         
-              <span class="ml-3 text-xl">Hello World!</span>
+              <span class="ml-3 text-xl">Read'O Verse!</span>
             </a>
           <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 Bro Codes —
             <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@Maharshi</a>
