--- a/library.html
+++ b/library.html
@@ -13,13 +13,13 @@
     <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-      <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span>
+    <a href="landing.html">  <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a href="#" class="mr-5 hover:text-white">Buy/Rent</a>
-      <a href="#" class="mr-5 hover:text-white">Reading Zone</a>
-      <a href="#" class="mr-5 hover:text-white">Events</a>
-      <a href="#" class="mr-5 hover:text-white">My Space</a>
+      <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
+      <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
+      <a href="Event_1.html" class="mr-5 hover:text-white">Events</a>
+      <a href="myspace.html" class="mr-5 hover:text-white">My Space</a>
     </nav>
   </div>
 </header>
@@ -42,7 +42,7 @@
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
       <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
-      <span class="ml-3 font-bold text-white text-xl">BRO-CODES</span>
+      <span class="ml-3 font-bold text-white text-xl">Read'O Verse!</span>
     </a>
     <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 BROCODES —
       <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@ANSH & @MAHARSHI</a>
