--- a/myspace.html
+++ b/myspace.html
@@ -19,7 +19,7 @@
       <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-      <a href="landing.html">  <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span></a>
+      <a href="landing.html">  <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
         <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
@@ -132,7 +132,7 @@ function app(){
     <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
-        <span class="ml-3 font-bold text-white text-xl">BRO-CODES</span>
+        <span class="ml-3 font-bold text-white text-xl">Read'O Verse!s</span>
       </a>
       <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023
         BROCODES —
