--- a/reading_zone.html
+++ b/reading_zone.html
@@ -17,7 +17,7 @@
       <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-      <a href="landing.html">  <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span></a>
+      <a href="landing.html">  <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
         <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
@@ -118,7 +118,7 @@
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4DvDLiZxLeUHWMErYhncB5?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <div class="p-6">
               <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
-              <h1 class="title-font text-lg font-medium text-white mb-3">Shooting Stars</h1>
+              <h1 class="title-font text-lg font-medium text-white mb-3">Instrumental Beats</h1>
               <p class="leading-relaxed mb-3 text-white">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing
                 microdosing tousled waistcoat.</p>
             </div>
@@ -135,7 +135,7 @@
     <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
-        <span class="ml-3 font-bold text-white text-xl">BRO-CODES</span>
+        <span class="ml-3 font-bold text-white text-xl">Read'O Verse!</span>
       </a>
       <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023
         BROCODES —
