--- a/buy_rent.html
+++ b/buy_rent.html
@@ -14,7 +14,7 @@
     <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-     <a href="landing.html"> <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span></a>
+     <a href="landing.html"> <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
@@ -77,7 +77,7 @@
     <div class="flex flex-wrap -m-4">
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Assets/compExam.png" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">Competitive</h1>
@@ -96,7 +96,7 @@
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Assets/nonfiction.png" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">Non Fiction</h1>
@@ -115,10 +115,10 @@
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Assets/moti&autobio.png" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
-            <h1 class="title-font text-lg font-medium text-white mb-3">Biography</h1>
+            <h1 class="title-font text-lg font-medium text-white mb-3">Biography & Motivational</h1>
             <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap ">
               <a href="#" class="text-indigo-400 inline-flex items-center md:mb-2 lg:mb-0">Explore
@@ -144,7 +144,7 @@
     <div class="flex flex-wrap -m-4">
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Assets/philosophy.png" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">Philosphy</h1>
@@ -162,7 +162,7 @@
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Assets/Finance.png" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">Finance</h1>
@@ -181,7 +181,7 @@
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Assets/fictional.png" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">Fiction</h1>
@@ -211,7 +211,7 @@
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
       <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
-      <span class="ml-3 font-bold text-white text-xl">BRO-CODES</span>
+      <span class="ml-3 font-bold text-white text-xl">Read'O Verse!</span>
     </a>
     <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 BROCODES —
       <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@ANSH & @MAHARSHI</a>
