--- a/buy_rent_in1.html
+++ b/buy_rent_in1.html
@@ -13,7 +13,7 @@
     <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-      <span class="ml-3 font-semibold text-white text-xl">BRO-CODES</span>
+      <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <a href="reading_zone.html" class="mr-5 hover:text-white">Reading Zone</a>
@@ -57,7 +57,7 @@
     <div class="flex flex-wrap -m-4">
       <div class="lg:w-1/4 md:w-1/2 p-4  w-full border-white">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/420x260">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/cengage.png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -67,7 +67,7 @@
       </div>
       <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/421x261">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/Ncert.png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -77,7 +77,7 @@
       </div>
       <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/422x262">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/Neet .png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -87,7 +87,7 @@
       </div>
       <div class="lg:w-1/4 md:w-1/2 p-4 w-full border-white">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/423x263">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/Cat.png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -97,7 +97,7 @@
       </div>
       <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/424x264">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/History.png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -107,7 +107,7 @@
       </div>
       <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/425x265">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/ssc.png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -117,7 +117,7 @@
       </div>
       <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/427x267">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/blackbook.png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -127,7 +127,7 @@
       </div>
       <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
         <a class="block relative h-48 rounded overflow-hidden">
-          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/428x268">
+          <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="Assets/biology.png">
         </a>
         <div class="mt-4">
           <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Title</h3>
@@ -145,9 +145,11 @@
     <footer class="text-gray-400 bg-gray-900 body-font">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
-      <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
-      <span class="ml-3 font-bold text-white text-xl">BRO-CODES</span>
-    </a>
+      <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+        <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
+
+      <a href="landing.html"><span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
+        </a>
     <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 BROCODES —
       <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@ANSH & @MAHARSHI</a>
     </p>
