--- a/buy_rent_in1.html
+++ b/buy_rent_in1.html
@@ -150,8 +150,8 @@
 
       <a href="landing.html"><span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
         </a>
-    <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 BROCODES —
-      <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@ANSH & @MAHARSHI</a>
+    <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 Team "Brocodes" by
+      <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@Maharshi & @Anshdeep</a>
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
       <a class="text-gray-400">
