--- a/landing.html
+++ b/landing.html
@@ -68,9 +68,9 @@
         
               <span class="ml-3 text-xl">Read'O Verse!</span>
             </a>
-          <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 Bro Codes —
-            <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@Maharshi</a>
-          </p>
+            <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2023 Team "Brocodes" by
+                <a href="#" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@Maharshi & @Anshdeep</a>
+              </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
             <a class="text-gray-400">
               <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
