--- a/myspace.html
+++ b/myspace.html
@@ -19,7 +19,7 @@
       <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
         <a href="#"><img src="Assets/header.gif" alt="logo" class="w-9 h-9 "></a>
 
-      <a href="landing.html">  <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
+      <a href="index.html">  <span class="ml-3 font-semibold text-white text-xl">Read'O Verse!</span></a>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
         <a href="buy_rent.html" class="mr-5 hover:text-white">Buy/Rent</a>
